cmake_minimum_required(VERSION 2.8.5)

project(sprotolib)

set(basiclibdst ${PROJECT_SOURCE_DIR}/../../../)

include_directories(${basiclibdst}/src/inc)
include_directories(${basiclibdst}/3rd/lua/src)
#include_directories(${basiclibdst}/3rd/Selene/include)
include_directories(${basiclibdst}/3rd/kaguya/include)
if(MSVC)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
	set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} /MP")
	add_definitions(-DUNICODE -D_UNICODE -D_XKEYCHECK_H -DKAGUYA_SUPPORT_MULTIPLE_SHARED_LIBRARY)
else()
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++11")
	add_definitions(-DKAGUYA_SUPPORT_MULTIPLE_SHARED_LIBRARY)
endif()
add_library(sproto SHARED lsproto.cpp sproto.cpp sproto.lua sprotoparser.lua) 
if(MSVC)
	target_link_libraries(sproto basicdll lualib)
endif()
